package cn.thinkinjava.design.pattern.struct.decorator.frame;

/**
 * 构件接口
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public interface Component {
    void sampleOperation();
}
