package cn.thinkinjava.design.pattern.struct.decorator.frame;

/**
 * 具体构件角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class ConcreteComponent implements Component {

    @Override
    public void sampleOperation() {

    }
}
